--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,12 @@ dependencies:
   firebase_core: ^3.2.0
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^17.2.1+2
+  flutter_native_timezone: ^2.0.0
+  intl: ^0.19.0
   shared_preferences: ^2.3.0
+  time_zone_list: ^1.0.0
+  timezone: ^0.9.4
 
 dev_dependencies:
   flutter_lints: ^3.0.0
