--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,5 @@
 name: goalzify
+# trunk-ignore(yamllint/quoted-strings)
 description: "A new Flutter project."
 publish_to: 'none'
 
@@ -10,17 +11,23 @@ environment:
 dependencies:
   carousel_slider: ^4.2.1
   cloud_firestore: ^5.1.0
+  cloudinary_public: ^0.23.1
   cupertino_icons: ^1.0.6
   firebase_auth: ^5.1.2
   firebase_core: ^3.2.0
+  firebase_storage: ^12.1.3
   flutter:
     sdk: flutter
   flutter_local_notifications: ^17.2.1+2
-  flutter_native_timezone: ^2.0.0
+  http: ^1.2.2
+  image_picker: ^1.1.2
   intl: ^0.19.0
+  lottie: ^3.1.2
+  path: ^1.9.0
   shared_preferences: ^2.3.0
-  time_zone_list: ^1.0.0
+  story_view: ^0.16.5
   timezone: ^0.9.4
+  video_player: ^2.9.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -31,3 +38,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/fireworks.json
